[package]
name = "stm32f1xx-lal"
version = "0.1.5"
edition = "2021"
description = "LAL for the STM32F1xx family"
readme = "README.md"
repository = "https://github.com/VladislavZinkevich/stm32f1xx-lal"
license = "MIT OR Apache-2.0"
keywords = [
    "arm",
    "cortex-m",
    "stm32",
    "hal",
]
categories = [
    "embedded",
    "no-std",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = true

[dependencies.cortex-m]
version = "0.7.7"

[dependencies.cortex-m-rt]
version = "0.7.3"

[dependencies.rtt-target]
version = "0.5.0"

[dependencies.stm32f1]
version = "0.15.1"

[features]
rt = ["stm32f1/rt"]
stm32f100 = [
    "stm32f1/stm32f100"
]
stm32f101 = [
    "stm32f1/stm32f101",
]
stm32f103 = [
    "stm32f1/stm32f103"
]
stm32f105 = [
    "stm32f1/stm32f107",
]
stm32f107 = [
    "stm32f1/stm32f107",
]
